--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -21,4 +21,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
